--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,18 +15,7 @@ jobs:
     
       - checkout
       
-      - run: mvn package
-      
-      - run:
-          name: Save test results
-          command: |
-            mkdir -p ~/junit/
-            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
-          when: always
-      - store_test_results:
-          path: ~/junit
-      - store_artifacts:
-          path: ~/junit
+      - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
       - run: sudo su -c 'echo "deb http://deb.debian.org/debian jessie-backports main" >> /etc/apt/sources.list'
       - run: sudo rm -rf /var/lib/apt/lists/*
