--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
     
       - checkout
       
-      - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+      - run: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
       - run: sudo su -c 'echo "deb http://deb.debian.org/debian jessie-backports main" >> /etc/apt/sources.list'
       - run: sudo rm -rf /var/lib/apt/lists/*
