--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,83 @@
             <url>http://opensource.org/licenses/mit-license.php</url>
         </license>
     </licenses>
+         
+         
+<dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.26</version>
+    </dependency>
+    <dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20090211</version>
+	</dependency>
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>jstl</artifactId>
+		<version>1.2</version>
+	</dependency>
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-core</artifactId>
+		<version>4.0.1.Final</version>
+	</dependency>
+	   
+	<dependency>
+		<groupId>io.spray</groupId>
+		<artifactId>spray-httpx</artifactId>
+		<version>1.1.3</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpclient</artifactId>
+		<version>4.5.1</version>
+	</dependency>
+	<dependency>
+		<groupId> com.sparkjava</groupId>
+		<artifactId>spark-core</artifactId>
+		<version>2.7.2</version>
+	</dependency>
+	  
+	  <dependency>
+	<groupId>org.primefaces</groupId>
+	<artifactId>primefaces</artifactId>
+	<version>6.1</version>
+         </dependency>	
+         <dependency>
+                  <groupId>org.apache.poi</groupId>
+                  <artifactId>poi</artifactId>
+                  <version>3.16</version>
+         </dependency>
+         <dependency>
+                  <groupId>org.apache.geode</groupId>
+                  <artifactId>geode-core</artifactId>
+                  <version>1.5.0</version>
+         </dependency>		
+         <dependency>
+                  <groupId>org.apache.cassandra</groupId>
+                  <artifactId>cassandra-all</artifactId>
+                  <version>3.3</version>
+         </dependency>
 
+
+                  <dependency>
+             <groupId>javax.servlet</groupId>
+             <artifactId>servlet-api</artifactId>
+             <version>2.3</version>
+             <scope>provided</scope>
+         </dependency>	 	
+  </dependencies>
+         
+         
     <build>
         <pluginManagement>
             <plugins>
